# database-schema

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
carpi_data_model/: models.py  professor.py
carpi_db_models/: __init__.py  course.py  course_attribute.py  course_relationship.py  course_restriction.py  course_seats.py  professor.py
examples/: usage_example.py
tests/: __init__.py  test_models.py
