[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "carpi-data-model"
version = "1.0"
dependencies = ["SQLAlchemy>=2.0.0"]
requires-python = ">=3.7"
authors = [{ name = "Raymond Chen" }, { name = "Jack Zgombic" }]
maintainers = [{ name = "Raymond Chen" }]
description = "The MySQL database schema used in Project CARPI."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Repository" = "https://github.com/Project-CARPI/database-schema"
